text_similarity_app/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: text-similarity-app-service
  labels:
    app: text-similarity-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8501
    protocol: TCP
  selector:
    app: text-similarity-app
